# text-to-sql-for-legacy-db

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openssl.cnf  pyproject.toml
.github/workflows/: tests.yml
deploy/: docker-compose.dev.yml  docker-compose.otlp.yml
docs/api/: standards.md
docs/db/: README.md
docs/infrastructure/: middleware_and_observability.md
docs/services/llm/: README.md
docs/services/pipelines/: README.md
docs/services/pipelines/offline/: README.md
docs/services/pipelines/online/: README.md
docs/services/strategies/: README.md
ivanpham_chatbot_assistant/: __init__.py  __main__.py  log.py  settings.py
ivanpham_chatbot_assistant/db/: base.py  config.py  dependencies.py  registry.py  session.py  utils.py
ivanpham_chatbot_assistant/db/engines/: base_engine.py  mysql_engine.py  postgres_engine.py  sqlserver_engine.py
ivanpham_chatbot_assistant/db/factory/: engine_factory.py
ivanpham_chatbot_assistant/db/migrations/: env.py
ivanpham_chatbot_assistant/db/migrations/versions/: 2026-03-08-20-50_f8a66e3b1aa6.py  2026-03-08-20-54_f7c2a2f58213.py  2026-03-08-21-06_7479bf23230c.py  2026-03-08-21-09_337ff3445028.py  2026-03-08-21-11_4c759a96a7c3.py  2026-03-09-00-10_c56555f965f4.py  2026-03-09-02-45_d4e5f6a1b2c3.py  2026-03-09-03-09_e7f8g9h1i2j3.py  2026-03-09-05-28_265fa9b35d33.py
ivanpham_chatbot_assistant/db/models/: __init__.py  column.py  column_description.py  database.py  foreign_key.py  query_example.py  schema.py  table.py  table_description.py
ivanpham_chatbot_assistant/db/pool/: pool_manager.py
ivanpham_chatbot_assistant/services/: __init__.py
ivanpham_chatbot_assistant/services/llm/: base_llm_provider.py  llm_service.py  provider_factory.py
ivanpham_chatbot_assistant/services/llm/providers/: anthropic_provider.py  azure_openai_provider.py  ollama_provider.py  openai_provider.py
ivanpham_chatbot_assistant/services/pipelines/offline/: __init__.py
ivanpham_chatbot_assistant/services/pipelines/online/: __init__.py  online_pipeline.py
ivanpham_chatbot_assistant/services/redis/: lifespan.py
ivanpham_chatbot_assistant/services/source_sql/: schema_crawler_service.py
ivanpham_chatbot_assistant/services/strategies/: __init__.py  base.py  manager.py
ivanpham_chatbot_assistant/services/strategies/ambiguous_question_detection/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/chain_of_thought/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/column_pruning/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/create_table_schema/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/dynamic_schema_selection/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/execution_feedback/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/few_shot/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/foreign_key_linking/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/format_constraint/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/least_to_most/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/negative_prompting/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/result_verification/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/role_prompting/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/sample_value_schema/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/schema_description/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/strategies/schema_linking/: __init__.py  strategy.py
ivanpham_chatbot_assistant/services/utils/: prompt_renderer.py
ivanpham_chatbot_assistant/services/vector_store/: qdrant_service.py
ivanpham_chatbot_assistant/utils/: batching.py
ivanpham_chatbot_assistant/web/: __init__.py  application.py  lifespan.py
ivanpham_chatbot_assistant/web/api/: __init__.py  router.py
ivanpham_chatbot_assistant/web/exceptions/: global_exception_handler.py
ivanpham_chatbot_assistant/web/metrics/: prometheus_metrics.py  schema_sync_metrics.py
ivanpham_chatbot_assistant/web/middleware/: logging_middleware.py  rate_limit_middleware.py  request_id_middleware.py
ivanpham_chatbot_assistant/web/routers/: query_router.py
ivanpham_chatbot_assistant/web/schemas/: __init__.py  base_response.py  error_response.py  pagination_response.py  query_schema.py  schema_index_request.py
ivanpham_chatbot_assistant/web/utils/: response_builder.py
scripts/: test_api_descriptions.py  verify_descriptions.py
tests/: __init__.py  conftest.py
tests/unit/: test_sql_generation_guards.py
(+49 files in other folders)
