[project]
name = "ivanpham_chatbot_assistant"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
description = ""
authors = []
maintainers = []
readme = "README.md"
dependencies = [
  "fastapi >=0.122.0,<1",
  "uvicorn[standard] >=0.38.0,<1",
  "pydantic >=2.12.5,<3",
  "pydantic-settings >=2.12.0,<3",
  "jinja2 >=3.1.5",
  "yarl >=1.22.0,<2",
  "ujson >=5.11.0,<6",
  "SQLAlchemy[asyncio] >=2.0.44,<3",
  "alembic >=1.17.2,<2",
  "asyncpg >=0.31.0,<1",
  "redis[hiredis] >=6,<7",
  "httptools >=0.7.1,<1",
  "pymongo >=4.15.4,<5",
  "prometheus-client >=0.23.1,<1",
  "prometheus-fastapi-instrumentator >=7.1.0,<8",
  "sentry-sdk >=2.46.0,<3",
  "opentelemetry-api >=1.38.0,<2",
  "opentelemetry-sdk >=1.38.0,<2",
  "opentelemetry-exporter-otlp >=1.38.0,<2",
  "opentelemetry-instrumentation >=0.59b0,<1",
  "opentelemetry-instrumentation-fastapi >=0.59b0,<1",
  "opentelemetry-instrumentation-redis >=0.59b0,<1",
  "opentelemetry-instrumentation-sqlalchemy >=0.59b0,<1",
  "loguru >=0.7.3,<1",
  "qdrant-client >=1.7.0",
  "slowapi>=0.1.9",
  "tenacity>=9.1.4",
  "langchain-core>=1.2.17",
  "langchain-openai>=1.1.10",
  "langchain-community>=0.4.1",
  "langchain-anthropic>=1.3.4",
  "pyodbc>=5.3.0",
  "sqlglot>=29.0.1",
  "psycopg2-binary>=2.9.10",
  "pymysql>=1.1.1",
]

[dependency-groups]
dev = [
  "pytest >=9.0.1,<10",
  "ruff >=0.14.6,<1",
  "mypy >=1.19.0,<2",
  "pre-commit >=4.5.0,<5",
  "pytest-cov >=7.0.0,<8",
  "anyio >=4.11.0,<5",
  "pytest-env >=1.2.0,<2",
  "fakeredis >=2.32.1,<3",
  "httpx >=0.28.1,<1",
]


[tool.uv]
default-groups = ["dev"]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["ivanpham_chatbot_assistant",]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_defs = true
allow_incomplete_defs = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_configs = false
no_implicit_optional = false
pretty = true
show_error_codes = true
# Disable noise for open source launch
disable_error_code = ["var-annotated", "attr-defined", "arg-type", "call-overload", "assignment", "index", "operator", "import-untyped"]
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
namespace_packages = true

[[tool.mypy.overrides]]
module = ['redis.asyncio']
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-p no:unraisableexception"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
anyio_mode = "auto"
env = [
    "IVANPHAM_CHATBOT_ASSISTANT_ENVIRONMENT=pytest",
    "IVANPHAM_CHATBOT_ASSISTANT_DB_BASE=ivanpham_chatbot_assistant_test",
    "IVANPHAM_CHATBOT_ASSISTANT_SENTRY_DSN=",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "ivanpham_chatbot_assistant/db/migrations",
    ".venv/"
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"] # Only core rules enabled
ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "B008",    # Do not perform function calls in argument defaults
    "D211",    # No blank lines allowed before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "D202",    # No blank lines allowed after function docstring
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
    "ERA001",  # Found commented-out code
    "E501",    # Line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLC0415", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
]

[fastapi-template.options]
project_name = "ivanpham_chatbot_assistant"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_routers = "None"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "None"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "True"
sentry_enabled = "True"
otlp_enabled = "True"
gunicorn = "None"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"
